# exemplar

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg-configuration.json
.ci/docker/: rockylinux.Dockerfile  ubuntu.Dockerfile
.devcontainer/: Dockerfile  Dockerfile_raw  devcontainer.json  postcreate.sh
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  cxx.yml  pre-commit.yml  reviewdog.yml
cmake/: CompilerFeatureTest.cmake  Config.cmake.in  apply_santizers.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake  toolchain.cmake
examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp  sample_usage.cpp
include/Beman/Example/: example.hpp  identity.hpp
include/beman/example/: identity.hpp
include/beman/exemplar/: identity.hpp
src/Beman/Example/: CMakeLists.txt  example.cpp  identity.cpp
src/Beman/Example/tests/: CMakeLists.txt  example.t.cpp  identity.t.cpp
src/beman/example/: CMakeLists.txt  identity.cpp  identity.t.cpp
src/beman/example/tests/: CMakeLists.txt
src/beman/exemplar/: CMakeLists.txt  badly_formatted_main.cpp  identity.cpp  identity.t.cpp
src/example/: CMakeLists.txt  example.hxx
test/example/: CMakeLists.txt  example.test.cpp  example.test.cxx  test1.pass.cpp  test2.verify.cpp  test3.compile.pass.cpp  test4.sh.cpp
test/support/: lit.cfg.in  testformat.py
tests/beman/exemplar/: CMakeLists.txt
