# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

set(TARGET_LIBRARY ${CMAKE_PROJECT_NAME})
set(TARGET_LIBRARY_ALIAS "Beman::Example")
set(TARGET_LIBRARY_BINARY "lib${TARGET_LIBRARY}")

add_library(${TARGET_LIBRARY} STATIC)
add_library(${TARGET_LIBRARY_ALIAS} ALIAS ${TARGET_LIBRARY})

target_sources(${TARGET_LIBRARY} PRIVATE example.cpp)

target_include_directories(
  ${TARGET_LIBRARY}
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../../include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${TARGET_LIBRARY}>)

install(
  TARGETS ${TARGET_LIBRARY}
  EXPORT ${TARGET_LIBRARY}
  ARCHIVE COMPONENT ${TARGET_LIBRARY_BINARY}
          FILE_SET HEADERS
          COMPONENT ${TARGET_LIBRARY_BINARY}-dev
  LIBRARY COMPONENT ${TARGET_LIBRARY_BINARY}
          NAMELINK_COMPONENT ${TARGET_LIBRARY_BINARY}-dev)

install(
  EXPORT ${TARGET_LIBRARY}
  FILE "${TARGET_LIBRARY}-config.cmake"
  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${TARGET_LIBRARY}"
  COMPONENT ${TARGET_LIBRARY_BINARY}-dev
  NAMESPACE Beman::)

if(BUILD_TESTING)
  add_subdirectory(tests)
endif()
