# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

set(TARGET_LIBRARY ${CMAKE_PROJECT_NAME})
set(TARGET_LIBRARY_ALIAS "Beman::Example")
set(TARGET_LIBRARY_BINARY "lib${TARGET_LIBRARY}")

add_library(${TARGET_LIBRARY} STATIC)
add_library(${TARGET_LIBRARY_ALIAS} ALIAS ${TARGET_LIBRARY})

target_sources(${TARGET_LIBRARY} PRIVATE identity.cpp)

target_include_directories(
  ${TARGET_LIBRARY}
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../../include>)

install(
  TARGETS ${TARGET_LIBRARY}
  EXPORT ${TARGET_LIBRARY}
  DESTINATION ${CMAKE_INSTALL_LIBDIR})

install(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  FILES_MATCHING
  PATTERN "*.hpp")

if(BUILD_TESTING)
  add_subdirectory(tests)
endif()
